apps/auth/overlays/prod/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: tn-don
      namespace: istio-gateway
      sectionName: tn-don-prod-auth
  hostnames:
    - set-in-overlay
  rules:
    - backendRefs:
        - name: don-auth-keycloak
          kind: Service
          port: 80
